--- a/css/mainPage.css
+++ b/css/mainPage.css
@@ -7,3 +7,74 @@ h1 {
 .centerDiv {
     text-align: center;
 }
+
+/*Glitch background animation*/
+.glitch
+{
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    background-image: url(../img/NeffexSoldier.jpg);
+    background-position: top;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.glitch:before
+{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-image: url(../img/NeffexSoldier.jpg);
+    background-position: top;
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: 0.5;
+    mix-blend-mode: hard-light;
+}
+.glitch:hover:before
+{
+    animation: glitch 1.8s ease infinite;
+}
+@keyframes glitch
+{
+    0% {
+        filter: hue-rotate(0deg);
+    }
+    75% {
+        background-position: 0 0;
+    }
+    77.5% {
+        background-position: 5px 0;
+    }
+    80% {
+        background-position: -5px 0;
+    }
+    82.5% {
+        background-position: 15px 0;
+    }
+    85% {
+        background-position: -5px 0;
+    }
+    87.5% {
+        background-position: -25px 0;
+    }
+    90% {
+        background-position: -50px 0;
+    }
+    92.5% {
+        background-position: 0 -20px;
+    }
+    95% {
+        background-position: -60px -20px;
+    }
+    97.5% {
+        background-position: 0 0;
+    }
+    100% {
+        background-position: 0 0;
+        filter: hue-rotate(360deg);
+    }
+}
