--- a/css/main.css
+++ b/css/main.css
@@ -8,8 +8,7 @@ main {
     min-height: 100vh;
     margin: 0 auto;
     background-color: #fefffe;
-    padding: 2em;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding-bottom: 2em;
 }
 main article {
     max-width: 800px;
@@ -18,8 +17,9 @@ main article {
 
 /*header style*/
 header {
-    position: fixed;
+    height: 100px;
     width: 100%;
+    background-color: #fefffe;
     font-weight: bold;
     z-index: 1;
 }
@@ -48,7 +48,6 @@ footer {
 }
 .footerNav {
     padding: 1em;
-    color: darkblue;
 }
 footer p {
     margin-bottom: 0;
