--- a/css/forFansPage.css
+++ b/css/forFansPage.css
@@ -1,21 +1,3 @@
-#scheduleTable {
-    table-layout: fixed;
-    border-collapse: collapse;
-    width: 100%;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-}
-#scheduleTable caption {
-    font-size: 1.5em;
-    font-weight: bold;
-    padding: 1em;
-}
-#scheduleTable td {
-    width: 33%;
-    padding: 1em;
-}
-#scheduleTable #tableHeaders {
-    font-weight: bold;
-}
-#tourPhoto {
-    width: 100% ;
+table caption {
+    caption-side: top;
 }
