--- a/css/mainPage.css
+++ b/css/mainPage.css
@@ -4,6 +4,7 @@
     width: 100%;
     height: 100vh;
     background-image: url(../img/NeffexSoldier.jpg);
+    background-color: #fefffe;
     background-repeat: no-repeat;
     background-size: 100%;
 }
@@ -13,6 +14,7 @@
     width: 100%;
     height: 100vh;
     background-image: url(../img/NeffexSoldier.jpg);
+    background-color: #fefffe;
     background-repeat: no-repeat;
     background-size: 100%;
     opacity: 0.5;
